# work_in_progress

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: automated-tests.yml
frontend/: Dockerfile
nginx/: nginx.conf
work_in_progress/: api.py  asgi.py  schemas.py  settings.py  urls.py  wsgi.py
work_in_progress/app/: admin.py  api.py  apps.py  models.py  schemas.py  test_models.py  utils.py  views.py
work_in_progress/app/migrations/: 0001_initial.py  0002_auto_20231002_2119.py  0003_auto_20231002_2222.py  0004_auto_20231002_2236.py  0005_auto_20231002_2238.py  0006_auto_20231002_2244.py  0007_contato_nome.py  0008_auto_20231009_1915.py  0009_produto.py  0010_produto_nome.py
