[tool.poetry]
name = "work_in_progress"
version = "0.1.0"
description = ""
authors = ["Luis Guilherme de Souza Munhoz <luisguilherme.sm@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.1.1"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
