[tool.poetry]
name = "work_in_progress"
version = "0.1.0"
description = ""
authors = ["Luis Guilherme de Souza Munhoz <luisguilherme.sm@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.1.1"
psycopg2-binary = "^2.9.8"
django-ninja = "^0.22.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.6.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-django = "^4.5.2"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = "true"
files = ["work_in_progress"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
